--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,19 @@ ul, ol {
     animation-duration: 1s;
     animation-fill-mode: both;
 }
+/*Linea de tiempo animacion del texto bienvenidos*/
+@keyframes bienvenidos {
+    0% {
+    -webkit-transform: translateY(-100%);
+    transform: translateY(-100%);
+    opacity: 0;
+    }
+    100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+    opacity: 100%;
+    }
+    } 
 .main__bienvenidos h1{
     font-size: 35px;
     text-align: center;
