--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,7 @@ ul, ol {
 img{
     max-width: 100%;
     height: auto;
+    transition: all 0.5s ease
 }
 .efecto img:hover{
     transform: scale(0.8);  /* No hace animacion solo gira */
