Se arreglo las otras paginas

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,7 @@ ul, ol {
     color: rgb(95, 10, 10);
     font-weight: bold;
     padding-top: 10px;
+    padding-left: 20px;
 }
 .main__servicios{
     display: grid;
