--- a/assets/css/partials/_hosting.scss
+++ b/assets/css/partials/_hosting.scss
@@ -36,7 +36,7 @@
     overflow: hidden;
     clear: both;
     display: block;
-    background-image: url("../../assets/img/banner_nosotros.jpg");
+    background-image: url("../../assets/img/banner_hosting.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -62,5 +62,6 @@
     color: rgb(95, 10, 10);
     font-weight: bold;
     padding-top: 10px;
-    font-size: 28px;
+    font-size: 20px;
+    padding-left: 30px;
 }
