--- a/assets/css/estilo.css
+++ b/assets/css/estilo.css
@@ -448,7 +448,7 @@
   max-width: 600px;
   height: auto;
   margin: 0 auto;
-  padding: 0 10px;
+  padding-top: 60px;
   margin-bottom: 100px;
 }
 .formulario h1 {
@@ -521,6 +521,12 @@
 }
 .formulario #reset :hover {
   background: #ddd;
+}
+
+.mapa {
+  max-width: 400px;
+  padding-top: 80px;
+  margin: 0 auto;
 }
 
 .banner__nosotros {
