--- a/assets/css/partials/_contacto.scss
+++ b/assets/css/partials/_contacto.scss
@@ -25,7 +25,7 @@
     max-width: 600px;
     height: auto;
     margin: 0 auto;
-    padding: 0 10px;
+    padding-top: 60px;
     margin-bottom: 100px;
 
     h1{
@@ -94,3 +94,8 @@
     }
   }
 
+.mapa{
+    max-width: 400px;
+    padding-top: 80px;
+    margin: 0 auto;
+}
