--- a/assets/css/partials/_medias.scss
+++ b/assets/css/partials/_medias.scss
@@ -1,4 +1,5 @@
 /* medias queries*/
+/*Relativas algunas se reemplazo por el bootstrap*/
 
 @media (max-width:970px){
     .header__content-navbar a{
