--- a/assets/css/partials/_variables.scss
+++ b/assets/css/partials/_variables.scss
@@ -3,8 +3,9 @@ $bgfooter:  rgb(6, 39, 20);
 $txt-footer: rgb(117, 235, 166);
 $bgDark: rgb(6, 39, 20);
 $txt-white: white;
+$border: rgb(47, 253, 133);
 
-// Breakpoint
+// Breakpoint // me sirve para las mediasquerys
 $bpSmall: 576px;
 $bpMedium: 768px;
 $bpLarge: 992px;
