--- a/assets/css/partials/_main.scss
+++ b/assets/css/partials/_main.scss
@@ -106,16 +106,6 @@
     }
     } 
 
-.cuadrado{
-    width: 20px;
-    height: 20px;
-    overflow: hidden;
-    background-color: #1a1a1a;
-    text-align: center;
-    margin: 0 auto;
-    transform: rotate(45deg);  /* No hace efecto */
-    
-}
 .main__trabajos{
     max-width: 990px;
     margin: 0 auto;
@@ -196,7 +186,17 @@
     bottom: 20px;
     right: 20px;
 }
+.nav-item{
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 900;
 
+    a{
+    color: $trabajos-titulos;
+    }
+    a:hover{
+    border-bottom: 2px solid $border;
+    }
+}
 /*ESTILOS A LA BARRA LATERAL DEL SITIO */
 
 /* width */
