--- a/assets/css/partials/_nosotros.scss
+++ b/assets/css/partials/_nosotros.scss
@@ -9,3 +9,12 @@
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+.img-nosotros{
+    background-image: url(/assets/img/equipo.jpg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
+    
+}
